--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
-  src: local('Montserrat-Regular'), url(font/montserrat.woff) format('woff');
+  src: url('font/montserrat-webfont.ttf') format('truetype'),
+  url('font/montserrat-webfont.svg') format('svg'),
+  url('font/montserrat-webfont.woff') format('woff'),
+  url('font/montserrat-webfont.eot');
 }
 
 #all-controls {
@@ -128,7 +131,7 @@ html {
   font-weight: bold;
   font-size: 1em;
   text-align: center;
-  -webkit-text-stroke: 0.3px;
+  -webkit-text-stroke: 0.1px;
   color: #000;
   margin-left: 5%;
   margin-right: 5%;
@@ -268,7 +271,7 @@ html {
   text-align: center;
   font-size: 1.5em;
   font-family: Montserrat;
-  -webkit-text-stroke:0.3px #000;
+  -webkit-text-stroke:0.1px #000;
   margin: 0 0 10px 0;
   color: #000;
   text-shadow: none;
@@ -388,7 +391,7 @@ html {
   font-family: Montserrat;
   font-size: 0.8em;
   text-align: center;
-  -webkit-text-stroke: 0.3px;
+  -webkit-text-stroke: 0.2px;
   color: #000;
 }
 
@@ -507,4 +510,3 @@ html {
 }
 
 /* end */
-
