--- a/style.css
+++ b/style.css
@@ -303,12 +303,13 @@ html {
 }
 
 .collapse-button {
-  height:30px;
-  width: 30px;
+  height:20px;
+  width: 20px;
   position: absolute;
-  right: 10px;
-  top: 10px;
-  background-image: url('img/collapse.png');
+  right: 6px;
+  top: 6px;
+  background-image: url('img/collapse.button.png');
+  background-size: 100%;
   cursor: pointer;
   cursor: hand;
   z-index: 5;
