--- a/style.css
+++ b/style.css
@@ -306,6 +306,16 @@ html {
   display:none;
 }
 
+.expand-icon {
+  height:20px;
+  width: 20px;
+  position: absolute;
+  right: 6px;
+  top: 6px;
+  background-image: url('img/expand.button.png');
+  background-size: 100%;
+}
+
 .collapse-button {
   height:20px;
   width: 20px;
@@ -393,7 +403,7 @@ html {
   margin-top: 10px;
 }
 
-#rain-slider-container {
+.sliders:first-child {
   border-top: 3px solid #000;
 }
 
