--- a/style.css
+++ b/style.css
@@ -452,12 +452,14 @@ html {
 #optionsbutton,
 .linkbuttons a {
   text-decoration: none;
-  border: 2px solid #000;
   padding: 2px 10px 2px 10px;
+  background-color: #000;
+  color: #FFF;
 }
 
 #timedpausepost,
-#timedfadepost {
+#timedfadepost,
+#meanderpost {
   display:none;
 }
 
@@ -482,8 +484,34 @@ html {
   font-family: Montserrat;
   font-size: 0.8em;
   text-align: center;
-  -webkit-text-stroke: 0.2px;
   color: #000;
+}
+
+/* Style for Meander slider track */
+
+#meanderpost .ui-slider-track {
+  margin: 0px auto;
+  background-color: #000;
+  height: 10px;
+  width: 20em;
+}
+
+#meanderpost .ui-slider-handle {
+  background-color: #FFF;
+  border: 2px solid black;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+}
+
+#meanderpost #meander-slider-label {
+  display: none;
+}
+
+#meander-description {
+  font-size: 1.5em;
+  margin-top: 1.5em;
+  -webkit-text-stroke: 0;
 }
 
 /* Begin responsive settings for smaller viewports */
